Separated UI into classes and Added move checker commands

--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,12 @@
 # Ignores everything, i.e. root files & root directories.
 /*
 /*/
-/img/backup/
 
 # But not these files...
 !.gitignore
+
+!MainController.java
+
 !Board.java
 !Checker.java
 !Main.java
@@ -14,6 +16,11 @@
 !Settings.java
 !Stack.java
 !StackInterface.java
+
+!InformationPanel.java
+!CommmandPanel.java
+!RollDiceButton.java
+
 
 # And not these folders...
 !/img/
