[Refactor] Modified mapCharToMove() method to map the maximum String of AZ as the key

--- a/game_engine/.gitignore
+++ b/game_engine/.gitignore
@@ -34,3 +34,7 @@
 /StackInterface.class
 /EventController$1.class
 /MainController$1.class
+/Point2D.class
+/EventController$1$1.class
+/EventController$1$2.class
+/PathTransitionExample.class
