--- a/.gitignore
+++ b/.gitignore
@@ -1,17 +1,56 @@
-# Ignores everything, i.e. root files & root directories.
+# Ignores everything, in any file or any folder of any depth.
 /*
 /*/
-*.ai
+/**/.gitignore
 *.ini
+*.ai
 *.svg
+*.class
 
 # But not these files...
-!.gitignore
-!readme.md
+!.gitignore/
+!readme.md/
 
 # And not these folders...
-!/game_engine/
+!/constants/
 !/events/
 !/exceptions/
-!/constants/
+!/game/
+!/game_engine/
+!/interfaces/
 !/move/
+!/musicplayer/
+!/ui/
+
+
+
+
+# IGNORE macOS FILES.
+# General
+.DS_Store
+.AppleDouble
+.LSOverride
+
+# Icon must end with two \r
+Icon\r\r
+Icon\r
+Icon
+
+# Thumbnails
+._*
+
+# Files that might appear in the root of a volume
+.DocumentRevisions-V100
+.fseventsd
+.Spotlight-V100
+.TemporaryItems
+.Trashes
+.VolumeIcon.icns
+.com.apple.timemachine.donotpresent
+
+# Directories potentially created on remote AFP share
+.AppleDB
+.AppleDesktop
+Network Trash Folder
+Temporary Items
+.apdisk
